# eecs211-hw6

./: CMakeLists.txt
src/: board.cpp  board.h  controller.cpp  controller.h  model.cpp  model.h  move.cpp  move.h  player.cpp  player.h  reversi.cpp  view.cpp  view.h
test/: board_test.cpp  model_test.cpp  move_test.cpp  player_test.cpp
